--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Excercise</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-	<string name="button">Seleccionar área</string>
+    <string name="button">Seleccionar área</string>
+    <string name="ButOk">OK</string>
+    <string name="title_activity_json">JsonActivity</string>
+
 </resources>
